@@ -1,21 +1,14 @@
 {
-  "timestamp" : "2022-05-25T08:20:12Z",
-  "count_outdated" : 289,
-  "uniques_outdated" : 159,
+  "timestamp" : "2022-05-26T01:22:54Z",
+  "count_outdated" : 291,
+  "uniques_outdated" : 160,
   "count" : 323,
   "uniques" : 181,
   "clones" : [
     {
-      "timestamp": "2022-05-11T00:00:00Z",
+      "timestamp": "2022-05-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
